# NER-MODEL

./: README.md  model.ipynb  pyproject.toml
