[tool.poetry]
name = "ner-model"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

pandas = "^1.5.3"
numpy = "^1.24.1"
jupyter = "^1.0.0"
ipykernel = "^6.20.2"
scikit-learn = "^1.2.1" 
spacy = "^3.5.0"
en_core_web_md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.5.0/en_core_web_md-3.5.0-py3-none-any.whl" }
fr_core_news_md = { url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.5.0/fr_core_news_md-3.5.0-py3-none-any.whl" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
